Changes to health API, remove root API
