# backend/openapi/healthv1.yml
@@ -7,91 +7,185 @@ info:
     - url: https://libdb.so/api/health/v1
 
 paths:
-  /latest.json:
-    summary: Get the latest health data
+  /current.json:
+    summary: Get the pet's current health data
+    description: |
+      Get the pet's current health data.
     get:
-      operationId: getLatestHealthData
-      parameters:
-        - name: range
-          in: query
-          description: |
-            The time range to fetch the data for in days as a floating point
-            number.
-          schema:
-            type: number
-            default: 1
-            minimum: 0
-            maximum: 7
+      operationId: getCurrentHealth
       responses:
         "200":
           description: |
-            Pet's latest health data in JSON format.
+            Pet's current health data in JSON format.
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/HealthData"
+                $ref: "#/components/schemas/CurrentHealth"
+
+  /history.json:
+    summary: Get the pet's health history
+    description: |
+      Get the pet's health history for a given time range.
+    get:
+      operationId: getHealthHistory
+      parameters:
+        - name: form
+          description: |
+            The start of the time range to fetch data from.
+
+            The server may reject `from` parameters that are too far in the past.
+          in: query
+          schema:
+            $ref: "#/components/schemas/Timestamp"
+        - name: to
+          description: |
+            The end of the time range to fetch data from. This timestamp must be
+            after `from`. 
+
+            The server may reject `to` parameters and only return data up to the
+            present time.
+          in: query
+          schema:
+            $ref: "#/components/schemas/Timestamp"
+      responses:
+        "200":
+          description: |
+            Pet's health history data in JSON format.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/HealthHistory"
+        "501":
+          description: |
+            The server does not support this endpoint.
 
 components:
   schemas:
-    HealthData:
+    CurrentHealth:
+      description: |
+        Current health data of the pet.
+      type: object
+      properties:
+        heartRate:
+          description: Current heart rate of the pet
+          allOf:
+            - $ref: "#/components/schemas/HeartRate"
+        steps:
+          description: Current steps taken by the pet
+          allOf:
+            - $ref: "#/components/schemas/StepsTaken"
+        sleep:
+          description: Current sleep status of the pet
+          allOf:
+            - $ref: "#/components/schemas/SleepStatus"
+        estrogen:
+          description: Current estrogen level of the pet
+          allOf:
+            - $ref: "#/components/schemas/EstrogenLevel"
+
+    HealthHistory:
+      description: |
+        History of the pet's health data.
+
+        This data is returned from /history.json and may cover the time range
+        given in the parameters.
       type: object
       properties:
         heartRate:
           description: Heart rate of the pet
           allOf:
-            - $ref: "#/components/schemas/Measurement"
+            - $ref: "#/components/schemas/HeartRateHistory"
         steps:
           description: Steps taken by the pet
           allOf:
-            - $ref: "#/components/schemas/Measurement"
+            - $ref: "#/components/schemas/StepsHistory"
         sleep:
           description: Sleep data of the pet
           allOf:
-            - $ref: "#/components/schemas/SleepData"
+            - $ref: "#/components/schemas/SleepHistory"
         estrogen:
           description: Estrogen level of the pet
           allOf:
-            - $ref: "#/components/schemas/EstrogenData"
+            - $ref: "#/components/schemas/EstrogenHistory"
 
-    SleepData:
-      description: Sleep data of the pet
+    ##
+    ## Sleep Data
+    ##
+
+    SleepHistory:
+      description: |
+        Sleep history of the pet.
+
+        The sleep history is represented as a list of sleep or awake periods,
+        optionally labeled with the sleep type.
       type: array
       items:
-        type: object
-        required:
-          - timestamp
-          - sleepType
-        properties:
-          timestamp:
-            $ref: "#/components/schemas/Timestamp"
-          sleepType:
-            $ref: "#/components/schemas/SleepType"
+        allOf:
+          - type: object
+            required: [from, to, asleep]
+            properties:
+              from:
+                description: Start of the sleep period
+                allOf:
+                  - $ref: "#/components/schemas/Timestamp"
+              to:
+                description: End of the sleep period
+                allOf:
+                  - $ref: "#/components/schemas/Timestamp"
+          - $ref: "#/components/schemas/SleepStatus"
+
+    SleepStatus:
+      description: |
+        The current sleep status of the pet.
+
+        The sleep status is represented as a single sleep or awake period,
+        optionally labeled with the sleep type. It is meant to be used to
+        describe the current sleep state of the pet.
+      type: object
+      required: [asleep]
+      properties:
+        asleep:
+          description: Whether the pet is asleep
+          type: boolean
+        sleepType:
+          description: Type of sleep
+          allOf:
+            - $ref: "#/components/schemas/SleepType"
 
     SleepType:
       description: Type of sleep
       type: string
       enum:
-        - deep
-        - light
-        - rem
         - awake
+        - rem
+        - light
+        - deep
 
-    EstrogenData:
-      description: Estrogen level of the pet
+    ##
+    ## Estrogen Data
+    ##
+
+    EstrogenHistory:
+      description: |
+        Estimated estrogen levels.
+
+        The estrogen levels are represented as a list of data points describing
+        the estrogen levels in ng/dL at different timestamps. The timestamps may
+        not be equally spaced.
       type: object
-      required:
-        - type
-        - levels
-        - dosageHistory
+      required: [type]
       properties:
         type:
           type: string
-          description: Type of estrogen (e.g. patches, pills, injection)
+          description: |
+            Type of estrogen (e.g. patches, pills, injection).
         levels:
-          description: Estimated estrogen levels of the pet
-          allOf:
-            - $ref: "#/components/schemas/Measurement"
-        dosageHistory:
+          description: |
+            Estimated estrogen levels of the pet over time in ng/dL.
+          type: array
+          items:
+            $ref: "#/components/schemas/DataPoint"
+        dosages:
           type: array
           description: |
             When the estrogen was administered, represented as a list of
@@ -99,20 +193,77 @@ components:
           items:
             $ref: "#/components/schemas/Timestamp"
 
-    Measurement:
+    EstrogenLevel:
+      description: |
+        Current estimated estrogen level in ng/dL
+      type: number
+      format: double
+
+    ##
+    ## Steps Data
+    ##
+
+    StepsHistory:
+      description: |
+        Steps taken by the pet over time.
       type: object
-      required:
-        - unit
-        - points
+      required: [data]
       properties:
-        unit:
-          type: string
-          description: Unit of the data points
-        points:
+        data:
+          description: |
+            Data points of the number of steps taken at different timestamps.
           type: array
-          description: List of data points
           items:
             $ref: "#/components/schemas/DataPoint"
+
+    StepsTaken:
+      description: |
+        Number of steps taken by the pet over a period of time.
+      type: object
+      properties:
+        from:
+          description: Start of the period
+          allOf:
+            - $ref: "#/components/schemas/Timestamp"
+        to:
+          description: End of the period
+          allOf:
+            - $ref: "#/components/schemas/Timestamp"
+        count:
+          description: Number of steps taken
+          type: integer
+          format: int32
+
+    ##
+    ## Heart Rate Data
+    ##
+
+    HeartRateHistory:
+      description: |
+        Heart rate of the pet over time.
+      type: object
+      required: [data]
+      properties:
+        data:
+          description: |
+            Data points of the heart rate at different timestamps.
+
+            Each data point is the average heart rate in beats per minute over a
+            period of time, usually the delta between a timestamp and its previous
+            one.
+          type: array
+          items:
+            $ref: "#/components/schemas/DataPoint"
+
+    HeartRate:
+      description: |
+        Current heart rate of the pet in beats per minute.
+      type: number
+      format: double
+
+    ##
+    ## Common Types
+    ##
 
     DataPoint:
       type: object
@@ -128,6 +279,5 @@ components:
           description: Value of the data point
 
     Timestamp:
-      type: integer
-      format: int64
-      description: Unix timestamp in seconds
+      type: string
+      format: date-time
